# rot

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: _config.yml  architecture.md  development.md  examples.md  getting-started.md  index.md
docs/assets/css/: just-the-docs-rot.scss
docs/guides/: captions-and-voices.md  clip-discovery.md  composition.md  index.md  publishing.md
docs/reference/: api.md  cli.md  index.md  output.md
src/rot/: __init__.py  captions.py  cli.py  clips.py  effects.py  errors.py  ffmpeg.py  models.py  probe.py  progress.py  project.py  publish.py  render.py  script.py  transcription.py
src/rot/integrations/: __init__.py  chatterbox.py  kokoro.py  openrouter.py  stable_ts.py
tests/: test_captions.py  test_cli.py  test_clips.py  test_ffmpeg.py  test_integration_ffmpeg.py  test_integrations.py  test_models.py  test_project_validation.py  test_public_api_docs.py  test_publish.py  test_script.py  test_transcription.py  test_transitions.py
