[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[project]
name = "rot"
version = "0.1.0"
description = "A high-performance Python toolkit for short-form vertical videos."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "rot contributors" }]
keywords = ["video", "captions", "tts", "reels", "shorts", "tiktok", "ffmpeg"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
]
dependencies = ["rich>=13.7"]

[project.optional-dependencies]
tts = ["chatterbox-tts>=0.1.7"]
chatterbox = ["chatterbox-tts>=0.1.7"]
kokoro = ["kokoro>=0.9.4", "numpy>=1.24", "soundfile>=0.13"]
align = ["stable-ts>=2.19"]
openrouter = ["httpx>=0.27"]
youtube = ["yt-dlp>=2025.12.8"]
publish = ["httpx>=0.27"]
all = [
  "chatterbox-tts>=0.1.7",
  "kokoro>=0.9.4",
  "numpy>=1.24",
  "soundfile>=0.13",
  "stable-ts>=2.19",
  "httpx>=0.27",
  "yt-dlp>=2025.12.8",
]

[project.scripts]
rot = "rot.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6",
  "ruff>=0.9",
  "mypy>=1.14",
  "twine>=6",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["rot"]

[[tool.mypy.overrides]]
module = ["chatterbox.*", "httpx", "kokoro", "numpy", "soundfile", "stable_whisper", "torch", "torchaudio", "yt_dlp", "yt_dlp.*"]
ignore_missing_imports = true
